fix travis